syntax="proto3";

// protoc -I=proto/ --go_out=proto/gen --go-grpc_out=proto/gen --go_opt=paths=source_relative --go-grpc_opt=paths=source_relative proto/search/v1/search.proto

import "search/v1/sync.proto";

package search.v1;
option go_package="search/v1;searchv1";

service SearchService {
  rpc Search(SearchRequest) returns (SearchResponse);

  // 可考虑提供业务专属接口
  //rpc SearchUser() returns()
}

message SearchRequest {
  string expression = 1;
  uint64 uid = 2;
}

message SearchResponse {
  ArticleResult article = 2;
}


message ArticleResult {
  repeated Article articles = 1;
}